Finished commenting code, need to do README

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 body {
-	background-color: blue;
-/*	background-image: url("http://wallpapercave.com/wp/wp1865381.jpg");
+	background-image: url("http://wallpapercave.com/wp/wp1865381.jpg");
 	object-fit: cover;
-*/}
+}
 
 
 /*7. Make sure that each car card element has a CSS class which adds a black border 
